[FIX] sap.m.ExpandableText: Prevent focus outline clipping in tables
SNOW: DINC0888355

--- a/src/sap.m/src/sap/m/themes/base/ExpandableText.less
+++ b/src/sap.m/src/sap/m/themes/base/ExpandableText.less
@@ -19,6 +19,11 @@
 	}
 }
 
+.sapUiTableCell .sapMExText .sapMLnk,
+.sapUiTableDataCell .sapMExText .sapMLnk {
+	vertical-align: bottom;
+}
+
 .sapMExTextRenderWhitespaceWrap {
 	white-space: pre-wrap;
 }
